--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,12 @@ description = ""
 authors = ["eugeneyan <eugeneyanziyou@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
-fastapi = "^0.60.1"
-jinja2 = "^2.11.2"
-uvicorn = "^0.11.6"
-python-multipart = "^0.0.5"
-aiofiles = "^0.5.0"
+python 
+fastapi
+jinja2
+uvicorn
+python-multipart
+aiofiles
 
 [tool.poetry.dev-dependencies]
 
