--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,15 +2,15 @@
 name = "fastapi-html"
 version = "0.1.0"
 description = ""
-authors = ["eugeneyan <eugeneyanziyou@gmail.com>"]
+authors = ["habeeb <mdhabeebvulla@gmail.com>"]
 
 [tool.poetry.dependencies]
-python 
-fastapi
-jinja2
-uvicorn
-python-multipart
-aiofiles
+python = "^3.7"
+fastapi = "^0.60.1"
+jinja2 = "^2.11.2"
+uvicorn = "^0.11.6"
+python-multipart = "^0.0.5"
+aiofiles = "^0.5.0"
 
 [tool.poetry.dev-dependencies]
 
