--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,11 @@ jinja2 = "^2.11.2"
 uvicorn = "^0.11.6"
 python-multipart = "^0.0.5"
 aiofiles = "^0.5.0"
+alembic = "^1.4.2"
+psycopg2 = "^2.8.5"
 
 [tool.poetry.dev-dependencies]
-
+requests = "^2.23.0"
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
